# oi_project_hillel

./: .gitignore  CMakeLists.txt
include/: syracouse_info.hpp
src/: main.cpp  syracouse_info.cpp
tests/: tests.cpp
